{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 3093,
  "lineage": "d63c0c34-dd54-27f8-993f-5fe43025d43a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tcp-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [
                  "5985",
                  "5986"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-08-02T07:50:45.587-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/develop-356920/global/firewalls/iis-tcp-rule",
            "log_config": [],
            "name": "iis-tcp-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/networks/iis-net-sql",
            "priority": 1000,
            "project": "develop-356920",
            "self_link": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/firewalls/iis-tcp-rule",
            "source_ranges": [
              "10.3.0.0/24",
              "10.4.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.sql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "winrm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "5985",
                  "5986"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-08-02T07:50:45.599-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/develop-356920/global/firewalls/iis-winrm-rule",
            "log_config": [],
            "name": "iis-winrm-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/networks/iis-net-sql",
            "priority": 1000,
            "project": "develop-356920",
            "self_link": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/firewalls/iis-winrm-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.sql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instancia-ad",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/images/windows-server-winrm-local-ad",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/develop-356920/zones/southamerica-east1-a/disks/bookshelf-ad"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/develop-356920/zones/southamerica-east1-a/instances/bookshelf-ad",
            "instance_id": "4035980002410661681",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "LsY9pRT9fUs=",
            "name": "bookshelf-ad",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.95.241.200",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/networks/iis-net-sql",
                "network_ip": "10.1.0.100",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/develop-356920/regions/southamerica-east1/subnetworks/ad-subnet-1",
                "subnetwork_project": "develop-356920"
              }
            ],
            "project": "develop-356920",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/develop-356920/zones/southamerica-east1-a/instances/bookshelf-ad",
            "service_account": [
              {
                "email": "668592541933-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "southamerica-east1-a"
          },
          "dependencies": [
            "google_compute_network.sql",
            "google_compute_subnetwork.ad1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instancia-iis",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/images/windows-server-winrm-local-core",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/develop-356920/zones/southamerica-east1-a/disks/bookshelf-iis"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/develop-356920/zones/southamerica-east1-a/instances/bookshelf-iis",
            "instance_id": "3001423011888006962",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "LsY9pRT9fUs=",
            "name": "bookshelf-iis",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.247.225.182",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/networks/iis-net-sql",
                "network_ip": "10.3.0.9",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/develop-356920/regions/southamerica-east1/subnetworks/private-sql-1",
                "subnetwork_project": "develop-356920"
              }
            ],
            "project": "develop-356920",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/develop-356920/zones/southamerica-east1-a/instances/bookshelf-iis",
            "service_account": [
              {
                "email": "668592541933-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "southamerica-east1-a"
          },
          "dependencies": [
            "google_compute_network.sql",
            "google_compute_subnetwork.sql1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instancia-sql-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/images/windows-server-winrm-local-core",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/develop-356920/zones/southamerica-east1-a/disks/bookshelf-sql1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/develop-356920/zones/southamerica-east1-a/instances/bookshelf-sql1",
            "instance_id": "6214779944887945008",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "LsY9pRT9fUs=",
            "name": "bookshelf-sql1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.198.55.138",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/networks/iis-net-sql",
                "network_ip": "10.3.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/develop-356920/regions/southamerica-east1/subnetworks/private-sql-1",
                "subnetwork_project": "develop-356920"
              }
            ],
            "project": "develop-356920",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/develop-356920/zones/southamerica-east1-a/instances/bookshelf-sql1",
            "service_account": [
              {
                "email": "668592541933-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "southamerica-east1-a"
          },
          "dependencies": [
            "google_compute_network.sql",
            "google_compute_subnetwork.sql1",
            "google_compute_subnetwork.sql2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "instancia-sql-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/images/windows-server-winrm-local-core",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/develop-356920/zones/southamerica-east1-a/disks/bookshelf-sql2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/develop-356920/zones/southamerica-east1-a/instances/bookshelf-sql2",
            "instance_id": "7879627169964787504",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata_fingerprint": "LsY9pRT9fUs=",
            "name": "bookshelf-sql2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.247.221.53",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/networks/iis-net-sql",
                "network_ip": "10.4.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/develop-356920/regions/southamerica-east1/subnetworks/private-sql-2",
                "subnetwork_project": "develop-356920"
              }
            ],
            "project": "develop-356920",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/develop-356920/zones/southamerica-east1-a/instances/bookshelf-sql2",
            "service_account": [
              {
                "email": "668592541933-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "southamerica-east1-a"
          },
          "dependencies": [
            "google_compute_network.sql",
            "google_compute_subnetwork.sql1",
            "google_compute_subnetwork.sql2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/develop-356920/global/networks/iis-net-sql",
            "mtu": 0,
            "name": "iis-net-sql",
            "project": "develop-356920",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/networks/iis-net-sql"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ad1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-02T07:50:46.537-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/develop-356920/regions/southamerica-east1/subnetworks/ad-subnet-1",
            "ip_cidr_range": "10.1.0.0/24",
            "name": "ad-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/networks/iis-net-sql",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "develop-356920",
            "purpose": "PRIVATE",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/develop-356920/regions/southamerica-east1/subnetworks/ad-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.sql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sql1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-02T07:50:45.972-07:00",
            "gateway_address": "10.3.0.1",
            "id": "projects/develop-356920/regions/southamerica-east1/subnetworks/private-sql-1",
            "ip_cidr_range": "10.3.0.0/24",
            "name": "private-sql-1",
            "network": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/networks/iis-net-sql",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "develop-356920",
            "purpose": "PRIVATE",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/develop-356920/regions/southamerica-east1/subnetworks/private-sql-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.sql"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "sql2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-08-02T07:50:45.952-07:00",
            "gateway_address": "10.4.0.1",
            "id": "projects/develop-356920/regions/southamerica-east1/subnetworks/private-sql-2",
            "ip_cidr_range": "10.4.0.0/24",
            "name": "private-sql-2",
            "network": "https://www.googleapis.com/compute/v1/projects/develop-356920/global/networks/iis-net-sql",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "develop-356920",
            "purpose": "PRIVATE",
            "region": "southamerica-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/develop-356920/regions/southamerica-east1/subnetworks/private-sql-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.sql"
          ]
        }
      ]
    }
  ]
}